# ppg-log

./: .bumper.toml  .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: lint_test.yml  pypi_release.yml
ppg_log/: cli.py  cli_db.py  db.py  exceptions.py  metrics.py  parser.py  viz.py
tests/: checks.py  test_db.py  test_flight_mode.py  test_models.py  test_parser.py  test_pipelines.py  test_summary_metrics.py  utils.py
tests/sample_data/: 13-46-02.CSV  json_mapping.json  multi_flight.json  no_flights.json  only_noise.json  single_flight_start_spikes.json  single_segment_no_noise.csv  single_segment_no_noise.json  start_noise_single_flight.json
