[tool.poetry]
name = "PPG-Log"
version = "0.1.0"
description = "Helper Tools for PPG FlySight Flight Log Management"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/ppg-log"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

include = [
    {path = "./CHANGELOG.md", format = "sdist"}
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/sco1/ppg-log/issues"

[tool.poetry.scripts]
ppglog = "ppg_log.cli:ppglog_cli"

[tool.poetry.dependencies]
python = "^3.10"
humanize = "^4.1"
kaleido = "^0.2, != 0.2.1.post1"
pandas = "^1.4"
peewee = "^3.15"
plotly = "^5.8"
python-dotenv = "^0.20"
typer = "^0.6"

[tool.poetry.dev-dependencies]
black = "^23.1"
bump2version = "^1.0"
cogapp = "^3.3"
flake8 = "^6.0"
flake8-annotations = "^3.0"
flake8-bugbear = "^23.1"
flake8-docstrings = "^1.6"
flake8-fixme = "^1.1"
isort = "^5.10"
mypy = "^1.0"
pep8-naming = "^0.13"
pre-commit = "^3.0"
pytest = "^7.1"
pytest-check = "^2.1"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
tox = "^4.4"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "ppg_log,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
