[project]
name = "PPG-Log"
version = "0.1.0"
description = "Helper Tools for PPG FlySight Flight Log Management"
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]
maintainers = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

requires-python = ">=3.10"
dependencies = [
    "humanize~=4.10",
    "kaleido~=0.2, != 0.2.1.post1",
    "pandas~=2.2",
    "peewee~=3.17",
    "plotly~=5.24",
    "python-dotenv~=1.0",
    "sco1-misc~=0.1",
    "typer-slim~=0.12",
]

[project.urls]
Homepage = "https://github.com/sco1/"
Documentation = "https://github.com/sco1/ppg-log/blob/main/README.md"
Repository = "https://github.com/sco1/ppg-log"
Issues = "https://github.com/sco1/ppg-log/issues"
Changelog = "https://github.com/sco1/ppg-log/blob/main/CHANGELOG.md"

[project.scripts]
ppglog = "ppg_log.cli:ppglog_cli"

[tool.uv]
dev-dependencies = [
    "black~=24.8",
    "bump2version~=1.0",
    "cogapp~=3.3",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "isort~=5.13",
    "mypy~=1.11",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "pytest-check~=2.4",
    "pytest-cov~=6.0",
    "pytest-randomly~=3.15",
    "ruff~=0.6",
    "tox~=4.18",
    "tox-uv~=1.11",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "ppg_log,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
